force-app/main/default/objects/Contact/fields/HS_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>HS_Last_Sync__c</fullName>
    <label>HS Last Sync</label>
    <type>DateTime</type>
</CustomField>