force-app/main/default/objects/Contact/fields/HS_Portal_Changed__c.field-meta.xml
<CustomField>
    <fullName>HS_Portal_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Changed</label>
    <type>Checkbox</type>
</CustomField>