force-app/main/default/objects/Contact/fields/HS_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>HS_Retry_Count__c</fullName>
    <label>HS Retry Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>