force-app/main/default/objects/Contact/fields/HS_Sync_Message__c.field-meta.xml
<CustomField>
    <fullName>HS_Sync_Message__c</fullName>
    <label>Sync Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>